--- a/Lab2/templates/index.html
+++ b/Lab2/templates/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div class="container">
-    <img src="https://filel.hutech.edu.vn/file/editor/homepage/stories/hinh34/logo%2 0CMYK-01.png" alt="hutech" style="display: block; margin-left: auto; margin-right: auto; width: 30%;">
+    <img src="https://file1.hutech.edu.vn/file/editor/homepage/stories/hinh34/logo%20CMYK-01.png" alt="hutech" style="display: block; margin-left: auto; margin-right: auto; width: 30%;">
     <h4 style="font-weight: bold; text-align: center;">BÀI THỰC HÀNH BẢO
         MẬT THÔNG TIN NÂNG CAO</h4>
         <ul style="margin-top: 30px;">
